# dpp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  rust.yml
assets/: dpp_mascote.asc
benches/: README.md  allocator-benchmarking.md  benchmark.sh
docs/: allocator-guide.md  architecture.md  encapsulation-playbook.md  synthetic-pcap-generator.md
docs/rfc/: 0001-architecture-boundaries.md  0002-cli-and-runtime-boundaries.md  0003-allocator-selection.md  0004-forward-only-matcher.md  0005-dual-path-pcap-parsing.md  0006-adaptive-pipeline.md  README.md
src/: allocator.rs  app.rs  cli.rs  config.rs  csv_writer.rs  custom_types.rs  dns_processor.rs  error.rs  main.rs  monitor_memory.rs  output.rs  packet_parser.rs  parquet_writer.rs  pipeio.rs  record.rs  runtime.rs  test_support.rs
src/dns_processor/: anonymizer.rs  matcher.rs  parser.rs  pipeline.rs  tests.rs  types.rs
tests/: end_to_end.rs
tests/support/: mod.rs
tools/dns-catalog-builder/: Cargo.toml
tools/dns-catalog-builder/src/: main.rs
tools/dns-pcap-generator/: Cargo.toml  build.rs  catalog_data.tsv
tools/dns-pcap-generator/config/: dns-pcap-generator.toml
tools/dns-pcap-generator/profiles/server1-jul-2024/: fitted-generator.toml
tools/dns-pcap-generator/src/: artifact.rs  catalog.rs  catalog_builder.rs  cli.rs  error.rs  generator.rs  lib.rs  main.rs  model.rs  packet.rs  profile.rs  rng.rs  tests.rs  tuning.rs
