[package]
name = "dns-pcap-generator"
version = "0.21.0"
edition = "2024"
rust-version = "1.94.1"
build = "build.rs"

[build-dependencies]
anyhow = "1.0.102"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1.0"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
pcap-file = "3.0.0-rc1"
seahash = "4.1.0"
thiserror = "2.0"
